--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
     <div id="carousel" class="carousel">
       <div class="slides">
-        <div class="slide active" style="background-image: url(#)">1</div>
-        <div class="slide" style="background-image: url(#)">1</div>
-        <div class="slide" style="background-image: url(#)">2</div>
+        <div class="slide active" style="background-image: url(#)"><!--<a href="#"></a>--></div>
+        <div class="slide" style="background-image: url(#)"><!--<a href="#"></a>--></div>
+        <div class="slide" style="background-image: url(#)"><!--<a href="#"></a>--></div>
         <div class="slide" style="background-image: url(#)"><!--<a href="#"></a>--></div>
         <div class="slide" style="background-image: url(#)"><!--<a href="#"></a>--></div>
       </div>
